--- a/store/blocks/product/product-details.jsonc
+++ b/store/blocks/product/product-details.jsonc
@@ -1,6 +1,6 @@
 {
   "flex-layout.row#product-details": {
-    "children": ["flex-layout.row#main", "sticky-layout#box"],
+    "children": ["flex-layout.row#main"/* , "sticky-layout#box" */],
     "props": {
       "blockClass": "product",
       "colSizing": "auto",
