--- a/store/blocks/product/right-col.jsonc
+++ b/store/blocks/product/right-col.jsonc
@@ -4,8 +4,10 @@
       "flex-layout.row#brand-and-rating",
       "flex-layout.row#product-name",
       "flex-layout.row#product-identifier",
-      "condition-layout.product#sku-selector-or-list",
-      "flex-layout.row#assembly-options"
+      "flex-layout.row#sku-list",
+      // "condition-layout.product#sku-selector-or-list",
+      "flex-layout.row#assembly-options",
+      "flex-layout.row#box"
       // "flex-layout.row#link-seller"
     ],
     "props": {
