--- a/store/blocks/product/box.jsonc
+++ b/store/blocks/product/box.jsonc
@@ -11,16 +11,16 @@
   "flex-layout.row#box": {
     "children": ["flex-layout.col#box"],
     "props": {
-      "blockClass": ["box"],
-      "preventHorizontalStretch": true,
-      "preventVerticalStretch": true
+      "blockClass": ["box"]//,
+      // "preventHorizontalStretch": true,
+      // "preventVerticalStretch": true
     }
   },
 
   "flex-layout.col#box": {
     "children": [
       "flex-layout.row#fake-summary",
-      "flex-layout.row#seller-name",
+      // "flex-layout.row#seller-name",
       "check-permission#product-price"
     ],
     "props": {
@@ -48,9 +48,9 @@
   "allowed-content#product-price": {
     "children": [
       "flex-layout.row#product-price",
-      "flex-layout.row#location-availability",
-      "flex-layout.row#product-availability-and-quantity",
-      "flex-layout.row#buy-buttons"
+      "flex-layout.row#location-availability"//,
+      // "flex-layout.row#product-availability-and-quantity",
+      // "flex-layout.row#buy-buttons-pdp"
     ]
   },
   "allowed-content#product-price-list": {
