--- a/store/blocks/product/buy-buttons.jsonc
+++ b/store/blocks/product/buy-buttons.jsonc
@@ -6,8 +6,23 @@
     }
   },
 
+  "flex-layout.row#buy-buttons-pdp": {
+    "children": ["flex-layout.col#buy-buttons-pdp"],
+    "props": {
+      "blockClass": "buy-buttons"
+    }
+  },
+  
   "flex-layout.col#buy-buttons": {
     "children": [/* "flex-layout.row#add-to-cart",  */"flex-layout.row#buy-now"],
+    "props": {
+      "blockClass": "buy-buttons",
+      "rowGap": 3
+    }
+  },
+  
+  "flex-layout.col#buy-buttons-pdp": {
+    "children": ["flex-layout.row#add-to-cart"],
     "props": {
       "blockClass": "buy-buttons",
       "rowGap": 3
