--- a/store/blocks/product/left-col.jsonc
+++ b/store/blocks/product/left-col.jsonc
@@ -1,6 +1,12 @@
 {
   "flex-layout.col#left-col": {
-    "children": ["product-images#desktop"],
+    "children": [
+      "product-images#desktop",
+      "flex-layout.row#description-and-gallery",
+      // "flex-layout.row#features",
+      "flex-layout.row#specification",
+      "flex-layout.row#reviews-and-ratings"
+    ],
     "props": {
       "blockClass": "left-col"
     }
