feat: pdp positions, sku-list settings and styles, quickorder styles, sku variations on minicart

--- a/store/blocks/minicart.jsonc
+++ b/store/blocks/minicart.jsonc
@@ -65,6 +65,7 @@
   "flex-layout.col#productInfo": {
     "children": [
       "flex-layout.row#productInfo__name",
+      "vtex.product-list:product-variations",
       "flex-layout.row#bottomInfo"
     ],
     "props": {
@@ -115,27 +116,19 @@
         "customer-approver"
       ]
     },
-    "blocks": [
-      "allowed-content#minicart",
-      "disallowed-content#minicart"
-    ]
+    "blocks": ["allowed-content#minicart", "disallowed-content#minicart"]
   },
   "allowed-content#minicart": {
-    "children": [
-      "minicart-checkout-button",
-      "link#quote"
-    ]
+    "children": ["minicart-checkout-button", "link#quote"]
   },
   "disallowed-content#minicart": {
-    "children": [
-      "link#quote"
-    ]
+    "children": ["link#quote"]
   },
   "link#quote": {
     "props": {
       "label": "Criar uma cotação",
       "displayMode": "button",
-      "blockClass": ["vtex-button","order-quote"],
+      "blockClass": ["vtex-button", "order-quote"],
       "href": "/b2b-quotes/create"
     }
   },
