--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -12,8 +12,9 @@
       "flex-layout.row#product-name",
       "flex-layout.row#product-identifier",
       "flex-layout.row#product-images",
+      "check-permission#sku-list",
       // "flex-layout.row#sku-selector",
-      "flex-layout.row#sku-list",
+      // "flex-layout.row#sku-list",
       "flex-layout.row#assembly-options",
       "flex-layout.row#divider",
       "flex-layout.row#box",
