--- a/store/blocks/product/box.jsonc
+++ b/store/blocks/product/box.jsonc
@@ -47,11 +47,38 @@
   },
   "allowed-content#product-price": {
     "children": [
-      "flex-layout.row#product-price",
-      "flex-layout.row#location-availability"//,
+      "flex-layout.row#product-price-and-location-availability"
+      // "flex-layout.row#product-price",
+      // "flex-layout.row#location-availability"//,
       // "flex-layout.row#product-availability-and-quantity",
       // "flex-layout.row#buy-buttons-pdp"
     ]
+  },
+  "flex-layout.row#product-price-and-location-availability": {
+    "children": [
+      "flex-layout.col#product-price-box",
+      "flex-layout.col#location-availability-box"
+      // "flex-layout.row#product-price",
+      // "flex-layout.row#location-availability"
+    ],
+    "props": {
+      "blockClass": ["product-price-and-location-availability"],
+      "preserveLayoutOnMobile": "true"
+    }
+  },
+  "flex-layout.col#product-price-box": {
+    "children": ["flex-layout.row#product-price"],
+    "props": {
+      "verticalAlign": "middle",
+      "horizontalAlign": "center"
+    }
+  },
+  "flex-layout.col#location-availability-box": {
+    "children": ["flex-layout.row#location-availability"],
+    "props": {
+      "verticalAlign": "middle",
+      "horizontalAlign": "center"
+    }
   },
   "allowed-content#product-price-list": {
     "children": [
