--- a/store/blocks/product/left-col.jsonc
+++ b/store/blocks/product/left-col.jsonc
@@ -8,7 +8,8 @@
       "flex-layout.row#reviews-and-ratings"
     ],
     "props": {
-      "blockClass": "left-col"
+      "blockClass": "left-col",
+      "preventVerticalStretch": true
     }
   }
 }
