--- a/store/blocks/product/location-availability.jsonc
+++ b/store/blocks/product/location-availability.jsonc
@@ -68,7 +68,7 @@
   "rich-text#shipping-availability": {
     "props": {
       "blockClass": ["reset-spacing"],
-      "text": "###### Shipping options",
+      "text": "###### Opções de envio",
       "font": "t-heading-6"
     }
   },
@@ -212,7 +212,7 @@
   "rich-text#shipping-simulator-title": {
     "props": {
       "blockClass": ["reset-spacing"],
-      "text": "##### Shipping",
+      "text": "##### Envio",
       "font": "t-heading-5"
     }
   },
@@ -220,7 +220,7 @@
   "rich-text#shipping-simulator-text": {
     "props": {
       "blockClass": ["reset-spacing", "fw5", "black-medium"],
-      "text": "Insert your Postal Code",
+      "text": "Insira o seu CEP",
       "font": "t-small",
       "textAlignment": "CENTER",
       "textPosition": "CENTER"
