feat: b2b-user-widget on top menu, header mobile and quick order button updates

--- a/store/blocks/header/drawer.jsonc
+++ b/store/blocks/header/drawer.jsonc
@@ -35,7 +35,7 @@
   // },
   "link#reseller": {
     "props": {
-      "label": "Organization Signup",
+      "label": "Cadastro de Organização",
       "href": "/organization-request",
       "blockClass": "resellerLink"
     }
@@ -55,7 +55,7 @@
   },
   "rich-text#quickTitle": {
     "props": {
-      "text": "Quick Order",
+      "text": "Pedido Rápido",
       "blockClass": "quickTitle"
     }
   },
